added troy's descriptions for home page/about us

--- a/aboutus.html
+++ b/aboutus.html
@@ -101,6 +101,11 @@
     <!-- Page Content -->
     <div class="container page-container">
 
+      <div class="mu-title">      
+        <span class="mu-subtitle">
+          About Us
+        </span>
+      </div>
       <!-- Page Heading/Breadcrumbs
       <h1 class="mt-4 mb-3">About Us
       </h1>
@@ -122,7 +127,7 @@
           <img class="img-fluid rounded mb-4" src="img/store.jpg" alt="">
         </div>
         <div class="col-lg-6">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed voluptate nihil eum consectetur similique? Consectetur, quod, incidunt, harum nisi dolores delectus reprehenderit voluptatem perferendis dicta dolorem non blanditiis ex fugiat.</p>
+          <p>We fell in love with Korean desserts and wanted to share our passion for the snowflake and toast with everyone. We wanted to create a warm and welcoming environment where people could come relax, hangout with friends, and enjoy our desserts and teas, so we did exactly that. We pride ourselves on our superior customer service and our authentic high-quality offerings. </p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, magni, aperiam vitae illum voluptatum aut sequi impedit non velit ab ea pariatur sint quidem corporis eveniet. Odit, temporibus reprehenderit dolorum!</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, consequuntur, modi mollitia corporis ipsa voluptate corrupti eum ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti necessitatibus perspiciatis quis?</p>
         </div>
