--- a/contactus.html
+++ b/contactus.html
@@ -102,16 +102,20 @@
     <div class="container page-container">
 
       <!-- Page Heading/Breadcrumbs -->
-      <h1 class="mt-4 mb-3">Contact
-        <small>Subheading</small>
-      </h1>
+      <div class="mu-title">      
+        <span class="mu-subtitle">
+          Contact
+        </span>
+      </div>
+<!--         <small>Subheading</small>
+ -->     
 
-      <ol class="breadcrumb">
+<!--       <ol class="breadcrumb">
         <li class="breadcrumb-item">
           <a href="index.html">Home</a>
         </li>
         <li class="breadcrumb-item active">Contact</li>
-      </ol>
+      </ol> -->
 
       <!-- Content Row -->
       <div class="row">
