--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                     </div>
                     <span class="title">Snowflake</span>
                     <p class="description"><span class="counter-value" data-count="150">0</span><sup>+</sup>Breakfast Items</p>
-
+                    <p>A popular Korean shaved ice dessert infused with condensed milk and topped with fruit and other garnishings</p>
                   </div>
                 </li>
 
@@ -204,7 +204,7 @@
                     </div>
                     <span class="title">Toast</span>
                     <p class="description"><span class="counter-value" data-count="150">0</span><sup>+</sup>Breakfast Items</p>
-
+                    <p> A slice of honey glazed toast finished with fruit and other ornamentations</p>
                   </div>
                 </li>
 
@@ -216,7 +216,7 @@
                     </div>
                     <span class="title">Tea</span>
                     <p class="description"><span class="counter-value" data-count="150">0</span><sup>+</sup>Breakfast Items</p>
-
+                    <p>A variety of milk teas, fruit teas, and cap teas</p>
                   </div>
                 </li>
 
