--- a/menu.html
+++ b/menu.html
@@ -254,7 +254,7 @@
                                 <div class="media-body">
                                   <h4 class="media-heading"><a href="#">Toast</a></h4>
                                   <span class="mu-menu-price">$5.49</span>
-                                  <p>Warm toast with butter.</p>
+                                  <p>Warm honey toast with butter.</p>
                                 </div>
                               </div>
                             </li>
@@ -268,7 +268,7 @@
                                 <div class="media-body">
                                   <h4 class="media-heading"><a href="#">Injeolmi Red Bean</a></h4>
                                   <span class="mu-menu-price">$5.99</span>
-                                  <p>Buttery toast topped with almond, soybean powder, red bean mochi, and condensed milk.</p>
+                                  <p>Buttery honey toast topped with almond, soybean powder, red bean mochi, and condensed milk.</p>
                                 </div>
                               </div>
                             </li>
@@ -282,7 +282,7 @@
                                 <div class="media-body">
                                   <h4 class="media-heading"><a href="#">Strawberry</a></h4>
                                   <span class="mu-menu-price">$6.25</span>
-                                  <p>Buttery toast topped with condensed milk, ice cream, strawberries, whipped cream, and chocolate and strawberry syrup.</p>
+                                  <p>Buttery honey toast topped with condensed milk, ice cream, strawberries, whipped cream, and chocolate and strawberry syrup.</p>
                                 </div>
                               </div>
                             </li>
@@ -303,7 +303,7 @@
                                 <div class="media-body">
                                   <h4 class="media-heading"><a href="#">Mango</a></h4>
                                   <span class="mu-menu-price">$6.25</span>
-                                  <p>Buttery toast topped with mango, condensed milk, whipped cream, mango syrup, and ice cream.</p>
+                                  <p>Buttery honey toast topped with mango, condensed milk, whipped cream, mango syrup, and ice cream.</p>
                                 </div>
                               </div>
                             </li>
@@ -317,7 +317,7 @@
                                 <div class="media-body">
                                   <h4 class="media-heading"><a href="#">Banana</a></h4>
                                   <span class="mu-menu-price">$6.25</span>
-                                  <p>Buttery toast topped with banana, condensed milk, whipped cream, chocolate syrup, and ice cream.</p>
+                                  <p>Buttery honey toast topped with banana, condensed milk, whipped cream, chocolate syrup, and ice cream.</p>
                                 </div>
                               </div>
                             </li>
@@ -347,7 +347,7 @@
                                 <div class="media-body">
                                   <h4 class="media-heading"><a href="#">21 Below Milk Tea</a></h4>
                                   <span class="mu-menu-price">$3.99</span>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nulla aliquid praesentium dolorem commodi illo.</p>
+                                  <p></p>
                                 </div>
                               </div>
                             </li>
@@ -361,7 +361,7 @@
                                 <div class="media-body">
                                   <h4 class="media-heading"><a href="#">Black Sugar Milk Tea</a></h4>
                                   <span class="mu-menu-price">$3.99</span>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nulla aliquid praesentium dolorem commodi illo.</p>
+                                  <p></p>
                                 </div>
                               </div>
                             </li>
@@ -375,7 +375,7 @@
                                 <div class="media-body">
                                   <h4 class="media-heading"><a href="#">Ice Cream Milk Tea</a></h4>
                                   <span class="mu-menu-price">$4.59</span>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nulla aliquid praesentium dolorem commodi illo.</p>
+                                  <p></p>
                                 </div>
                               </div>
                             </li>
@@ -389,7 +389,7 @@
                                 <div class="media-body">
                                   <h4 class="media-heading"><a href="#">Jasmine Green Milk Tea</a></h4>
                                   <span class="mu-menu-price">$3.99</span>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nulla aliquid praesentium dolorem commodi illo.</p>
+                                  <p></p>
                                 </div>
                               </div>
                             </li>
@@ -410,7 +410,7 @@
                                 <div class="media-body">
                                   <h4 class="media-heading"><a href="#">Roasted Oolong Milk Tea</a></h4>
                                   <span class="mu-menu-price">$3.99</span>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nulla aliquid praesentium dolorem commodi illo.</p>
+                                  <p></p>
                                 </div>
                               </div>
                             </li>
@@ -424,7 +424,7 @@
                                 <div class="media-body">
                                   <h4 class="media-heading"><a href="#">Red Velvet Milk Tea</a></h4>
                                   <span class="mu-menu-price">$4.49</span>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nulla aliquid praesentium dolorem commodi illo.</p>
+                                  <p></p>
                                 </div>
                               </div>
                             </li>
@@ -438,7 +438,7 @@
                                 <div class="media-body">
                                   <h4 class="media-heading"><a href="#">Blue Velvet Milk Tea??</a></h4>
                                   <span class="mu-menu-price">$4.49</span>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nulla aliquid praesentium dolorem commodi illo.</p>
+                                  <p></p>
                                 </div>
                               </div>
                             </li>
@@ -469,10 +469,25 @@
                                 <div class="media-body">
                                   <h4 class="media-heading"><a href="#">Cheese Jasmine Green Tea</a></h4>
                                   <span class="mu-menu-price">$4.59</span>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nulla aliquid praesentium dolorem commodi illo.</p>
+                                  <p></p>
                                 </div>
                               </div>
                             </li>
+                             <li>
+                              <div class="media">
+                                <div class="media-left">
+                                  <a href="#">
+                                    <img class="media-object" src="img/tea1.jpg" alt="img">
+                                  </a>
+                                </div>
+                                <div class="media-body">
+                                  <h4 class="media-heading"><a href="#">Cheese Osmanthus Oolong Tea</a></h4>
+                                  <span class="mu-menu-price">$4.59</span>
+                                  <p></p>
+                                </div>
+                              </div>
+                            </li>
+
                           </ul>
                         </div>
                       </div>
@@ -490,21 +505,7 @@
                                 <div class="media-body">
                                   <h4 class="media-heading"><a href="#">Cheese Oolong Tea</a></h4>
                                   <span class="mu-menu-price">$4.59</span>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nulla aliquid praesentium dolorem commodi illo.</p>
-                                </div>
-                              </div>
-                            </li>
-                             <li>
-                              <div class="media">
-                                <div class="media-left">
-                                  <a href="#">
-                                    <img class="media-object" src="img/tea1.jpg" alt="img">
-                                  </a>
-                                </div>
-                                <div class="media-body">
-                                  <h4 class="media-heading"><a href="#">Cheese ??? Oolong Tea</a></h4>
-                                  <span class="mu-menu-price">$4.59</span>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nulla aliquid praesentium dolorem commodi illo.</p>
+                                  <p></p>
                                 </div>
                               </div>
                             </li>
@@ -518,7 +519,7 @@
                                 <div class="media-body">
                                   <h4 class="media-heading"><a href="#">Cheese Peach Oolong Tea</a></h4>
                                   <span class="mu-menu-price">$4.59</span>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nulla aliquid praesentium dolorem commodi illo.</p>
+                                  <p></p>
                                 </div>
                               </div>
                             </li>
@@ -547,7 +548,7 @@
                                 <div class="media-body">
                                   <h4 class="media-heading"><a href="#">Passion Green Tea</a></h4>
                                   <span class="mu-menu-price">$4.49</span>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nulla aliquid praesentium dolorem commodi illo.</p>
+                                  <p></p>
                                 </div>
                               </div>
                             </li>
@@ -561,7 +562,7 @@
                                 <div class="media-body">
                                   <h4 class="media-heading"><a href="#">Mango Green Tea</a></h4>
                                   <span class="mu-menu-price">$3.99</span>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nulla aliquid praesentium dolorem commodi illo.</p>
+                                  <p></p>
                                 </div>
                               </div>
                             </li>
@@ -575,7 +576,7 @@
                                 <div class="media-body">
                                   <h4 class="media-heading"><a href="#">Grapefruit Green Tea</a></h4>
                                   <span class="mu-menu-price">$3.99</span>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nulla aliquid praesentium dolorem commodi illo.</p>
+                                  <p></p>
                                 </div>
                               </div>
                             </li>
@@ -589,7 +590,7 @@
                                 <div class="media-body">
                                   <h4 class="media-heading"><a href="#">Lemon Green Tea</a></h4>
                                   <span class="mu-menu-price">$3.99</span>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nulla aliquid praesentium dolorem commodi illo.</p>
+                                  <p></p>
                                 </div>
                               </div>
                             </li>
@@ -603,7 +604,7 @@
                                 <div class="media-body">
                                   <h4 class="media-heading"><a href="#">Jasmine Green Tea</a></h4>
                                   <span class="mu-menu-price">$3.99</span>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nulla aliquid praesentium dolorem commodi illo.</p>
+                                  <p></p>
                                 </div>
                               </div>
                             </li>
@@ -624,7 +625,7 @@
                                 <div class="media-body">
                                   <h4 class="media-heading"><a href="#">Orange Green Tea</a></h4>
                                   <span class="mu-menu-price">$3.99</span>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nulla aliquid praesentium dolorem commodi illo.</p>
+                                  <p></p>
                                 </div>
                               </div>
                             </li>
@@ -638,7 +639,7 @@
                                 <div class="media-body">
                                   <h4 class="media-heading"><a href="#">Lychee Green Tea</a></h4>
                                   <span class="mu-menu-price">$3.99</span>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nulla aliquid praesentium dolorem commodi illo.</p>
+                                  <p></p>
                                 </div>
                               </div>
                             </li>
@@ -652,7 +653,7 @@
                                 <div class="media-body">
                                   <h4 class="media-heading"><a href="#">Yogurt Green Tea</a></h4>
                                   <span class="mu-menu-price">$3.99</span>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nulla aliquid praesentium dolorem commodi illo.</p>
+                                  <p></p>
                                 </div>
                               </div>
                             </li>
@@ -666,7 +667,7 @@
                                 <div class="media-body">
                                   <h4 class="media-heading"><a href="#">Oolong Tea</a></h4>
                                   <span class="mu-menu-price">$2.99</span>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere nulla aliquid praesentium dolorem commodi illo.</p>
+                                  <p></p>
                                 </div>
                               </div>
                             </li>
