Fixed sizing on home page, and fixed FAQ section

--- a/index.html
+++ b/index.html
@@ -191,8 +191,7 @@
                       <img src="img/img.jpg" />
                     </div>
                     <span class="title">Snowflake</span>
-                    <p class="description"><span class="counter-value" data-count="150">0</span><sup>+</sup>Breakfast Items</p>
-                    <p>A popular Korean shaved ice dessert infused with condensed milk and topped with fruit and other garnishings</p>
+                    <p class="description">A milky twist to a popular Korean shaved ice dessert</p>
                   </div>
                 </li>
 
@@ -203,8 +202,7 @@
                       <img src="img/img5.jpg" />
                     </div>
                     <span class="title">Toast</span>
-                    <p class="description"><span class="counter-value" data-count="150">0</span><sup>+</sup>Breakfast Items</p>
-                    <p> A slice of honey glazed toast finished with fruit and other ornamentations</p>
+                    <p class="description">A honey glazed toast finished with fruit</p>
                   </div>
                 </li>
 
@@ -215,8 +213,7 @@
                       <img src="img/img17.jpg" />
                     </div>
                     <span class="title">Tea</span>
-                    <p class="description"><span class="counter-value" data-count="150">0</span><sup>+</sup>Breakfast Items</p>
-                    <p>A variety of milk teas, fruit teas, and cap teas</p>
+                    <p class="description">A variety of milk teas, fruit teas, and cap teas</p>
                   </div>
                 </li>
 
@@ -255,12 +252,12 @@
                     <div class="mu-single-gallery-item">
 	                    <figure class="mu-single-gallery-img">
 	                      <a class="mu-imglink" href="assets/img/gallery/1.jpg">
-                          <img alt="img" src="img/environment1.png">
+                          <img alt="img" src="img/picture.png">
                           <div class="heading">
-                            AESTHETIC
+                            INSTA WORTHY
                           </div>
                           <div class ="description">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia
+                            Modern & hip aesthetic
                           </div>
                         </a>
 	                    </figure>
@@ -270,12 +267,12 @@
                     <div class="mu-single-gallery-item">
 	                    <figure class="mu-single-gallery-img">
 	                      <a class="mu-imglink" href="assets/img/gallery/1.jpg">
-                          <img alt="img" src="img/environment2.png">
+                          <img alt="img" src="img/man-reading.png">
                           <div class="heading">
-                            CHILL
+                            QUIET
                           </div>
                           <div class ="description">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia
+                            Good for studying
                           </div>
                         </a>
 	                    </figure>
@@ -285,12 +282,12 @@
                     <div class="mu-single-gallery-item">
 	                    <figure class="mu-single-gallery-img">
 	                      <a class="mu-imglink" href="assets/img/gallery/1.jpg">
-                          <img alt="img" src="img/environment3.png">
+                          <img alt="img" src="img/chess.png">
                           <div class="heading">
                             FUN
                           </div>
                           <div class ="description">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia
+                            Variety of board games
                           </div>
                         </a>
 	                    </figure>
@@ -417,7 +414,7 @@
 
           </div>
           <div class="mu-footer-copyright">
-            <p>&copy; Copyright <a rel="nofollow" href="http://markups.io">markups.io</a>. All right reserved.</p>
+            <p>&copy; <a rel="nofollow" href="http://markups.io">2018 -21&#176;C Snowflake</a>. All right reserved.</p>
           </div>
         </div>
       </div>
