Updated contact us

--- a/contactus.html
+++ b/contactus.html
@@ -133,12 +133,11 @@
         <div class="col-md-6">
           <div class="mu-contact-right">
             <div class="mu-contact-widget">
-              <h3>Office Address</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia temporibus corporis ea non consequatur porro corrupti hic voluptatibus assumenda, doloribus.</p>
-              <address>
+              <h3>Location</h3>
                 <p><i class="fa fa-map-marker"></i> 4764 Convoy St, San Diego, CA 92111</p>
                 <p><i class="fa fa-phone"></i> (858) 264-4352</p>
                 <p><i class="fa fa-envelope-o"></i>contact@markups.io</p>
+              <p>We are happy to work with students organizations! Please contact us for more information.</p>
 
               </address>
             </div>
