--- a/aboutus.html
+++ b/aboutus.html
@@ -127,9 +127,8 @@
           <img class="img-fluid rounded mb-4" src="img/store.jpg" alt="">
         </div>
         <div class="col-lg-6">
-          <p>We fell in love with Korean desserts and wanted to share our passion for the snowflake and toast with everyone. We wanted to create a warm and welcoming environment where people could come relax, hangout with friends, and enjoy our desserts and teas, so we did exactly that. We pride ourselves on our superior customer service and our authentic high-quality offerings. </p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, magni, aperiam vitae illum voluptatum aut sequi impedit non velit ab ea pariatur sint quidem corporis eveniet. Odit, temporibus reprehenderit dolorum!</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, consequuntur, modi mollitia corporis ipsa voluptate corrupti eum ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti necessitatibus perspiciatis quis?</p>
+           <p>Our shop was created from our love of Korean-styled desserts. We enjoyed their simplicity and unique flavors and wanted to share this experience with others. Our goal was to create a warm and welcoming environment where people could come to relax, spend time with friends, and enjoy our desserts and teas.</p>
+          <p>Additonally, we pride ourselves in our quality products and customer service. All our food and drinks are made with fresh ingredients and don't contain any artificial flavorings. Furthermore, our products are prepared right before serving. This is to ensure that our customers get the best possible experience. </p>
         </div>
       </div>
       <!-- /.row -->
