--- a/faqs.html
+++ b/faqs.html
@@ -103,7 +103,7 @@
     <div class="container page-container">
 
       <!-- Page Heading/Breadcrumbs -->
-      <h1 class="mt-4 mb-3">FAQ
+         <h1 class="mt-4 mb-3">FAQ
         <small>Subheading</small>
       </h1>
 
@@ -125,7 +125,7 @@
     </div>
     <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
       <div class="panel-body">
-        A snowflake is a dessert made with soft, creamy snow and often topped with fruit, ice cream, and other delicious treats. Our snows also come in a variety of flavors such as Original, Matcha, and Thai Tea.
+        A Snowflake is a dessert made with soft, creamy snow and often topped with fruit, ice cream, and other delicious treats. Our snows also come in a variety of flavors such as Original, Matcha, and Thai Tea.
       </div>
     </div>
   </div>
@@ -133,13 +133,13 @@
     <div class="panel-heading" role="tab" id="headingTwo">
       <h4 class="panel-title">
         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          Do you have any Dairy-free items?
+          What is a Cheese Tea?
         </a>
       </h4>
     </div>
     <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
       <div class="panel-body">
-         Yes! All our fruit teas are made without dairy.
+         A Cheese Tea is a tea topped with sea salt cream cheese foam. It has a delicious creamy consistency and adds a unique flavor profile to the tea. It can be added to four types of tea: Jasmine Green Tea, Oolong Tea, Osmanthus Oolong Tea, and Peach Oolong Tea.
       </div>
     </div>
   </div>
@@ -147,13 +147,69 @@
     <div class="panel-heading" role="tab" id="headingThree">
       <h4 class="panel-title">
         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-          Do any of your products contain nuts?
+          Do you have any Dairy-free or Vegan items?
         </a>
       </h4>
     </div>
     <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
       <div class="panel-body">
+        Yes, all our fruit teas are made without dairy, eggs, or honey.
+      </div>
+    </div>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingFour">
+      <h4 class="panel-title">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+          Do any of your products contain nuts?
+        </a>
+      </h4>
+    </div>
+    <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
+      <div class="panel-body">
         Yes, our Korean Style, Oreo, and Thai Tea Snowflakes and our Korean Style Toast contain Almonds. However, these items can be made without Almonds upon request.
+      </div>
+    </div>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingFive">
+      <h4 class="panel-title">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+          Can you adjust the sweetness in my tea?
+        </a>
+      </h4>
+    </div>
+    <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
+      <div class="panel-body">
+        We are more than happy to make tea to your liking. When ordering, please let us know what percentage of sweetness you would prefer.
+      </div>
+    </div>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingSix">
+      <h4 class="panel-title">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+          Do you work with student organizations for funraising or catering?
+        </a>
+      </h4>
+    </div>
+    <div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSix">
+      <div class="panel-body">
+        Yes! Please contact us for more information about our rates.
+      </div>
+    </div>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingSeven">
+      <h4 class="panel-title">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
+          Is the store environmentally friendly?
+        </a>
+      </h4>
+    </div>
+    <div id="collapseSeven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSeven">
+      <div class="panel-body">
+        Yes! All our Snowflakes and Toasts are served on glass plates and bowls. Additionally, our fruit teas are served in reusable cups. However, given the nature of our machinery, we are unable to use reuable cups for our milk-based teas.
       </div>
     </div>
   </div>
