Update spelling in FAQ

--- a/faqs.html
+++ b/faqs.html
@@ -125,7 +125,7 @@
     </div>
     <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
       <div class="panel-body">
-        A Snowflake is a dessert made with soft, creamy snow and often topped with fruit, ice cream, and other delicious treats. Our snows also come in a variety of flavors such as Original, Matcha, and Thai Tea.
+        A Snowflake is a dessert made with soft, creamy snow and often topped with fruit, ice cream, and other delicious treats. Our snow also comes in a variety of flavors such as Original, Green Tea, and Thai Tea.
       </div>
     </div>
   </div>
