CSS fixes and temp why us section
- menu item titles/pics are no longer clickable
- semi-janky fix for non-menu images
- filler why us section
- fixed broken image issue for hosting

--- a/aboutus.html
+++ b/aboutus.html
@@ -124,7 +124,7 @@
       <!-- Intro Content -->
       <div class="row">
         <div class="col-lg-6">
-          <img class="img-fluid rounded mb-4" src="img/store.jpg" alt="">
+          <img class="imgg" class="img-fluid rounded mb-4" src="img/store.jpg" alt="">
         </div>
         <div class="col-lg-6">
            <p>Our shop was created from our love of Korean-styled desserts. We enjoyed their simplicity and unique flavors and wanted to share this experience with others. Our goal was to create a warm and welcoming environment where people could come to relax, spend time with friends, and enjoy our desserts and teas.</p>
