--- a/index.html
+++ b/index.html
@@ -147,13 +147,13 @@
             <div class="row">
               <div class="col-md-6">
                <div class="mu-about-us-left">
-                <img src="img/o.jpg" alt="img">
+                <img class="imgg" src="img/o.jpg" alt="img">
                 </div>
               </div>
               <div class="col-md-6">
                  <div class="mu-about-us-right">
-                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam minus aliquid, itaque illum assumenda repellendus dolorem, dolore numquam totam saepe, porro delectus, libero enim odio quo. Explicabo ex sapiente sit eligendi, facere voluptatum! Quia vero rerum sunt porro architecto corrupti eaque corporis eum, enim soluta, perferendis dignissimos, repellendus, beatae laboriosam.</p>
-                  <ul>
+                 <p>-21 C snowflake is the only store in San Diego selling Snowflakes. Unlike the traditional bingsu, Snowflakes are made using milk to create a smoother, more flavorful bite. They are then drizzled with condensed milk and topped with delicious toppings like fresh fruit, mochi, Oreo crumbles, or almonds. Additionally, we also sell fresh, made-in-house toasts, milk teas, fruit teas, and cap teas. We make every product with care and you know you’re getting a quality service when you come to -21 C Snowflake.</p>
+<!--                   <ul>
                     <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
                     <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
                     <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia.</li>
@@ -161,7 +161,7 @@
                     <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
                     <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia.</li>
                   </ul>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque similique molestias est quod reprehenderit, quibusdam nam qui, quam magnam.</p>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque similique molestias est quod reprehenderit, quibusdam nam qui, quam magnam.</p> -->
                 </div>
               </div>
             </div>
