--- a/contactus.html
+++ b/contactus.html
@@ -138,7 +138,7 @@ var hourofday = date.getHours();
       <div class="row">
         <!-- Map Column -->
         <div class="col-md-6">
-           <img src="img/storefront.jpg" />
+           <img class="imgg" src="img/storefront.jpg" />
         </div>
 
 
@@ -158,7 +158,7 @@ var hourofday = date.getHours();
             <div class="mu-contact-widget">
             <h3>Our Hours</h3>
              <div id="icon">
-                 <img src="img/snowflakeicon.ico" alt="alternative text" title="There's a crowd right now!"/>
+                 <img class="imgg" src="img/snowflakeicon.ico" alt="alternative text" title="There's a crowd right now!"/>
               </div>
 
               <script type="text/javascript"> 
