--- a/index.html
+++ b/index.html
@@ -89,32 +89,6 @@
       </div>
     </nav>
   </header>
-  <!-- End header section -->
-
-
-
-
-  <!-- Start slider
-  <section id="mu-slider">
-  <div class="mu-slider-area">
-  <div class="mu-top-slider">
-
-  <div class="mu-top-slider-single">
-  <img src="img/allsnowflakes.jpg" alt="img" class="sliderImg">
-</div>
-<div class="mu-top-slider-single">
-<img src="img/milkteas2.jpg" alt="img">
-</div>
-
-<div class="mu-top-slider-single">
-<img src="img/hands1.jpg" alt="img">
-</div>
-
-</div>
-</div>
-</section>
-
--->
 
 <section id="mu-slider">
   <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
@@ -126,7 +100,7 @@
         <img src="img/allsnowflakes.jpg" alt="...">
       </div>
       <div class="item">
-        <img src="img/milkteas2.jpg" alt="...">
+        <img src="img/slider1.jpg" alt="...">
       </div>
     </div>
 
@@ -143,274 +117,93 @@
 </section>
 
 <!-- End slider  -->
+<seciton id="whyus-section">
+  <div class = "container whyus-container">
+    <div class = "row whyus-row">
+      <div class="col-sm-6 whyus-pic">
+        <div class="imageBlock">
+          <img src="img/square-oreo-snowflake.jpg"/>
+        </div>
+      </div>
+      <div class ="col-sm-6 whyus-text">
+        <div class="title">
+          -21&#176;C Snowflake
+        </div>
 
-<!-- Start About us -->
-<section id="mu-about-us">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="mu-about-us-area">
+        <div class="subtitle">
+          sweet, smooth, shaved ice
+        </div>
 
-          <div class="mu-title">
-            <span class="mu-subtitle">WHY US</span>
-          </div>
-
-          <div class="row">
-            <div class="col-md-6">
-              <div class="mu-about-us-left">
-                <img class="imgg" src="img/o.jpg" alt="img">
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="mu-about-us-right">
-                <p>-21 C snowflake is the only store in San Diego selling Snowflakes. Unlike the traditional bingsu, Snowflakes are made using milk to create a smoother, more flavorful bite. They are then drizzled with condensed milk and topped with delicious toppings like fresh fruit, mochi, Oreo crumbles, or almonds. Additionally, we also sell fresh, made-in-house toasts, milk teas, fruit teas, and cap teas. We make every product with care and you know you’re getting a quality service when you come to -21 C Snowflake.</p>
-                <!--                   <ul>
-                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia.</li>
-                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia.</li>
-              </ul>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque similique molestias est quod reprehenderit, quibusdam nam qui, quam magnam.</p> -->
-            </div>
-          </div>
+        <div class="content">
+          It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
         </div>
       </div>
     </div>
   </div>
-</div>
-</section>
-<!-- End About us -->
+</seciton>
 
-<!-- Start Counter Section -->
-<section id="mu-counter">
-  <div class="mu-counter-overlay">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="mu-counter-area">
-            <div class="mu-title">
-              <span class="mu-subtitle" style="color: white;">What we offer</span>
-            </div>
-            <ul class="mu-counter-nav">
-
-              <li class="col-md-4 col-sm-4 col-xs-12">
-                <div class="mu-single-counter">
-
-                  <div class="menuImage">
-                    <img src="img/img.jpg" />
-                  </div>
-                  <span class="title">Snowflake</span>
-                  <p class="description">A milky twist to a popular Korean shaved ice dessert</p>
-                </div>
-              </li>
-
-              <li class="col-md-4 col-sm-4 col-xs-12">
-                <div class="mu-single-counter">
-
-                  <div class="menuImage">
-                    <img src="img/img5.jpg" />
-                  </div>
-                  <span class="title">Toast</span>
-                  <p class="description">A honey glazed toast finished with fruit</p>
-                </div>
-              </li>
-
-              <li class="col-md-4 col-sm-4 col-xs-12">
-                <div class="mu-single-counter">
-
-                  <div class="menuImage">
-                    <img src="img/img17.jpg" />
-                  </div>
-                  <span class="title">Tea</span>
-                  <p class="description">A variety of milk teas, fruit teas, and cap teas</p>
-                </div>
-              </li>
-
-            </ul>
-
-          </div>
+<section id="menu-section">
+  <div class="container menu-container">
+    <div class="menu-title">
+      <div class ="title">
+        our menu
+        <div class="line"></div>
+      </div>
+      <div class="description">
+        Check out our selection of tasty, breads, delectable cakes, refreshing teas, and coffee brewed at the perfect temperature.
+      </div>
+    </div>
+    <div class="row menu-row">
+      <div class="col-sm-4 image">
+        <div class="text">
+          SNOWFLAKE
+          <div class="line"></div>
         </div>
+        <img src="img/snowflake.jpg" />
+      </div>
+      <div class="col-sm-4 image">
+        <div class="text">
+          TOAST
+          <div class="line"></div>
+        </div>
+        <img src="img/toast.jpg" />
+      </div>
+      <div class="col-sm-4 image">
+        <div class="text">
+          TEA
+          <div class="line"></div>
+        </div>
+        <img src="img/milktea.jpg" />
+      </div>
+    </div>
+  </div>
+
+</section>
+
+<section id="mail-section">
+  <div class="container mail-container">
+    <div class="row mail-row">
+      <div class="col-sm-6 mail-form">
+        <div class="form">
+          <div class="title">
+            Join Our List
+          </div>
+          <div class="sub-title">
+            Be the first to know about our latest promotions and new releases.
+          </div>
+
+          <input type="text" name="FirstName" value="Email">
+          <input type="submit" value="Submit">
+        </div>
+      </div>
+
+      <div class="col-sm-6 image">
+        <img src="img/store.jpg" />
       </div>
     </div>
   </div>
 </section>
-<!-- End Counter Section -->
 
-
-<!-- Start Reservation section -->
-<!-- End Reservation section -->
-
-<!-- Start Gallery -->
-<section id="mu-gallery">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="mu-gallery-area">
-
-          <div class="mu-title">
-            <span class="mu-subtitle">Environment</span>
-
-          </div>
-
-          <div class="mu-gallery-content">
-
-            <!-- Start gallery image -->
-            <div class="mu-gallery-body">
-              <!-- start single gallery image -->
-              <div class="mu-single-gallery col-md-4">
-                <div class="mu-single-gallery-item">
-                  <figure class="mu-single-gallery-img">
-                    <a class="mu-imglink">
-                      <img alt="img" src="img/picture.png">
-                      <div class="heading">
-                        INSTA-WORTHY
-                      </div>
-                      <div class ="description">
-                        Modern & hip
-                      </div>
-                    </a>
-                  </figure>
-                </div>
-              </div>
-              <div class="mu-single-gallery col-md-4">
-                <div class="mu-single-gallery-item">
-                  <figure class="mu-single-gallery-img">
-                    <a class="mu-imglink">
-                      <img alt="img" src="img/man-reading.png">
-                      <div class="heading">
-                        QUIET
-                      </div>
-                      <div class ="description">
-                        Good for studying
-                      </div>
-                    </a>
-                  </figure>
-                </div>
-              </div>
-              <div class="mu-single-gallery col-md-4">
-                <div class="mu-single-gallery-item">
-                  <figure class="mu-single-gallery-img">
-                    <a class="mu-imglink">
-                      <img alt="img" src="img/chess.png">
-                      <div class="heading">
-                        FUN
-                      </div>
-                      <div class ="description">
-                        Variety of board games
-                      </div>
-                    </a>
-                  </figure>
-                </div>
-              </div>
-
-              <!-- End single gallery image -->
-
-              <!-- start single gallery image -->
-
-              <!-- End single gallery image -->
-
-              <!-- start single gallery image -->
-
-              <!-- End single gallery image -->
-
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- End Gallery -->
-
-<!-- Start Client Testimonial section -->
-
-<!-- End Client Testimonial section -->
-
-<!-- Start Chef Section -->
-<!-- End Chef Section -->
-
-
-
-<!-- Start Contact section -->
-<!--   <section id="mu-contact">
-<div class="container">
-<div class="row">
-<div class="col-md-12">
-<div class="mu-contact-area">
-
-<div class="mu-title">
-<span class="mu-subtitle">Get In Touch</span>
-<h2>Contact Us</h2>
-</div>
-
-<div class="mu-contact-content">
-<div class="row">
-
-<div class="col-md-6">
-<div class="mu-contact-left">
--->                    <!-- Email message div -->
-<!--                     <div id="form-messages"></div>
--->                    <!-- Start contact form -->
-<!--                     <form id="ajax-contact" method="post" action="mailer.php" class="mu-contact-form">
-<div class="form-group">
-<label for="name">Your Name</label>
-<input type="text" class="form-control" id="name" name="name" placeholder="Name" required>
-</div>
-<div class="form-group">
-<label for="email">Email address</label>
-<input type="email" class="form-control" id="email" name="email" placeholder="Email" required>
-</div>
-<div class="form-group">
-<label for="subject">Subject</label>
-<input type="text" class="form-control" id="subject" name="subject" placeholder="Subject" required>
-</div>
-<div class="form-group">
-<label for="message">Message</label>
-<textarea class="form-control" id="message" name="message"  cols="30" rows="10" placeholder="Type Your Message" required></textarea>
-</div>
-<button type="submit" class="mu-send-btn">Send Message</button>
-</form>
-</div>
-</div>
-
-<div class="col-md-6">
-<div class="mu-contact-right">
-<div class="mu-contact-widget">
-<h3>Office Address</h3>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia temporibus corporis ea non consequatur porro corrupti hic voluptatibus assumenda, doloribus.</p>
-<address>
-<p><i class="fa fa-phone"></i> (850) 457 6688</p>
-<p><i class="fa fa-envelope-o"></i>contact@markups.io</p>
-<p><i class="fa fa-map-marker"></i>368 St. Panama City, Florida, USA</p>
-</address>
-</div>
-<div class="mu-contact-widget">
-<h3>Open Hours</h3>
-<address>
-<p><span>Monday - Friday</span> 9.00 am to 12 pm</p>
-<p><span>Saturday</span> 9.00 am to 10 pm</p>
-<p><span>Sunday</span> 10.00 am to 12 pm</p>
-</address>
-</div>
-</div>
-</div>
-
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</section> -->
-<!-- End Contact section -->
-
-<!-- Start Map section -->
-<!--   <section id="mu-map">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9207.358598888495!2d-85.64847801496286!3d30.183918972289003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0000000000000000%3A0x2320479d70eb6202!2sDillard&#39;s!5e0!3m2!1sbn!2sbd!4v1462359735720" width="100%" height="100%" frameborder="0"allowfullscreen></iframe>
-</section> -->
-<!-- End Map section -->
 
 <!-- Start Footer -->
 <footer id="mu-footer">
