Map size change

--- a/index.html
+++ b/index.html
@@ -198,9 +198,11 @@
               <li class="col-md-4 col-sm-4 col-xs-12">
                 <div class="mu-single-counter">
 
+                  <a href="menu.html">
                   <div class="menuImage">
-                    <img src="img/img.jpg" />
+                    <img class = menuImage src="img/img.jpg" />
                   </div>
+                </a>
                   <span class="title">Snowflake</span>
                   <p class="description">A milky twist to a popular Korean shaved ice dessert</p>
                 </div>
@@ -415,6 +417,17 @@
 <!-- Start Footer -->
 <footer id="mu-footer">
   <div class="container">
+    Address
+    4764 Convoy St, San Diego, CA 92111
+    <address>
+                <p><span>Monday </span>12:00 PM - 11:00 PM</p>
+                <p><span>Tuesday </span>12:00 PM - 11:00 PM</p>
+                <p><span>Wednesday </span>12:00 PM - 11:00 PM</p>
+                <p><span>Thursday </span>12:00 PM - 11:00 PM</p>
+                <p><span>Friday </span>12:00 PM - 12:00 AM</p>
+                <p><span>Saturday </span>12:00 PM - 12:00 AM</p>
+                <p><span>Sunday </span>12:00 PM - 12:00 AM</p> 
+    </address>
     <div class="row">
       <div class="col-md-12">
         <div class="mu-footer-area">
